# at28c-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  dump.py  memory.x
.cargo/: config
at28c-rs-cli/: Cargo.toml
at28c-rs-cli/src/: cmds.rs  main.rs
at28c-rs-firmware/: Cargo.toml  openocd.cfg  openocd.gdb
at28c-rs-firmware/src/: cmds.rs  main.rs
at28c-rs-firmware/src/at28c/: blue_at.rs  mod.rs
src/: cmds.rs  main.rs
src/at28c/: blue_at.rs  mod.rs
