[workspace]
members = [
    "at28c-rs-firmware",
    "at28c-rs-cli",
]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "s"

[profile.dev]
#lto = true
codegen-units = 1
opt-level = 2
