#cargo-features = ["profile-overrides"] # +

[package]
authors = ["thalesfragoso <thales.fragosoz@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "at28c-rs-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
stm32f1xx-hal = {version = "0.5.3", features = ["stm32f103", "stm32-usbd", "rt"]}
usb-device = "0.2.5"
usbd-serial = {git = "https://github.com/thalesfragoso/usbd-serial", branch = "writer-impl"}
#panic-halt = "0.2.0"
cortex-m-rtfm = "0.5.1"
embedded-hal = "0.2.3"
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"

# Uncomment for the panic example.
# panic-itm = "0.4.0"

# this lets you use `cargo fix`!
[[bin]]
name = "at28c-rs-firmware"
test = false
bench = false

#[profile.dev.overrides."*"] # +
#opt-level = "s" # +
