#cargo-features = ["profile-overrides"] # +

[package]
authors = ["thalesfragoso <thales.fragosoz@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "at28c-rs-firmware"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
stm32f1xx-hal = {version = "0.5.3", features = ["stm32f103", "stm32-usbd", "rt"]}
usb-device = "0.2.5"
usbd-serial = {git = "https://github.com/thalesfragoso/usbd-serial", branch = "writer-impl"}
cortex-m-rtfm = "0.5.1"
embedded-hal = "0.2.3"

# this lets you use `cargo fix`!
[[bin]]
name = "at28c-rs-firmware"
test = false
bench = false

#[profile.dev.overrides."*"] # +
#opt-level = "s" # +
